fixed title selector on mobile

--- a/css/app.scss
+++ b/css/app.scss
@@ -88,6 +88,9 @@ body {
 }
 
 .hero_selector {
+  @media (hover: none) {
+    display: none;
+  }
   height: 100vh;
   position: absolute;
   top: 0;
@@ -96,6 +99,7 @@ body {
   font-size: 2rem;
   text-transform: uppercase;
   ul {
+    list-style: none;
     cursor: pointer;
     transition: all 0.3s ease;
     padding: 1rem;
