--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,13 @@ body {
   font-size: 2rem;
   text-transform: uppercase;
 }
+@media (hover: none) {
+  .hero_selector {
+    display: none;
+  }
+}
 .hero_selector ul {
+  list-style: none;
   cursor: pointer;
   transition: all 0.3s ease;
   padding: 1rem;
